--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "next": "^15.0.2",
     "react": "^18.3.1",
