--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.2.0",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "next": "^15.0.2",
